🚀 v2.0.36: Unify versions & docs for KotlinConf 2025-2026 submission
Changes:
- Unified all module versions to 2.0.36
- Updated contest documentation (README, JUDGE_QUICKSTART, CONTEST_START)
- Fixed percentage symbols in docs
- Added demo video documentation
- Reorganized webMain → jsMain/wasmJsMain source sets
- Updated localized strings

Verified:
✅ All judge scripts pass (verify_all.sh)
✅ All builds successful (Android, Desktop, Web JS, Web Wasm, iOS)
✅ Detekt passes with zero issues
✅ 87% F1 Score accuracy maintained

--- a/androidApp/src/main/res/values-ar/strings.xml
+++ b/androidApp/src/main/res/values-ar/strings.xml
@@ -235,6 +235,7 @@
     <string name="cd_delete_item">حذف هذا المسح من السجل</string>
     <string name="cd_clear_history">مسح كل سجل المسح</string>
     <string name="cd_search_history">البحث في سجل المسح</string>
+    <string name="filter_all">الكل</string>
     <string name="cd_filter_safe">إظهار عمليات المسح الآمنة فقط</string>
     <string name="cd_filter_suspicious">إظهار عمليات المسح المشبوهة فقط</string>
     <string name="cd_filter_malicious">إظهار عمليات المسح الخبيثة فقط</string>
